# NewsMTSC

./: .gitignore  DatasetPreparer.py  LICENSE  MANIFEST.in  README.md  READMEpypi.md  SentimentClasses.py  combinations_default.py  controller.py  createoverview.py  dataset.py  diskdict.py  download.py  earlystopping.py  evaluator.py  fxlogger.py  hubconf.py  infer.py  plotter_utils.py  pyproject.toml  pythoninfo.md  setup.cfg  train.py
DeepNewsSentiment/: DatasetPreparer.py  __main__.py  combinations_default.py  consts.py  controller.py  createoverview.py  customexceptions.py  dataset.py  diskdict.py  download.py  earlystopping.py  evaluator.py  fxlogger.py  hubconf.py  infer.py  plotter_utils.py  train.py
DeepNewsSentiment/knowledge/bingliuopinion/: bingliuopinion.py  converter.py  negative-words.txt  opinion_polarity.ddict
DeepNewsSentiment/knowledge/liwc/: liwc.py  liwchelper.py
DeepNewsSentiment/knowledge/mpqasubjectivity/: converter.py  mpqasubjectivity.py
DeepNewsSentiment/knowledge/nrcemolex/: converter.py  nrcemolex.py
DeepNewsSentiment/layers/: pytorchnlpattention.py
DeepNewsSentiment/losses/: crossentropycrossweight.py  crossentropylosslsr.py  seq2seqloss.py
DeepNewsSentiment/models/: FXBaseModel.py  FXEnsemble.py  ensemble.py  ensembleb.py
DeepNewsSentiment/models/multitargets/: contrasting.py  random_multi.py  seq2seq.py  seq2seq_without_targetmask.py  tdbertlikemultitarget.py  tdbertlikemultitarget_dense.py
DeepNewsSentiment/models/singletarget/: aen.py  grutscsingle.py  lcf.py  lcf2.py  lcfs.py  lcfst.py  lcft.py  notargetcls.py  random_single.py  spc.py  td_bert.py  td_bert_qa.py  tdbertlikesingle.py
NewsSentiment/: DatasetPreparer.py  __init__.py  __main__.py  combinations_default.py  controller.py  converter_huggingface.py  createoverview.py  dataset.py  diskdict.py  download.py  earlystopping.py  evaluator.py  fxlogger.py  infer.py  inferrest.py  ner_example.py  plotter_utils.py  train.py
NewsSentiment/knowledge/bingliuopinion/: bingliuopinion.py  converter.py
NewsSentiment/knowledge/liwc/: liwc.py
NewsSentiment/knowledge/mpqasubjectivity/: converter.py  mpqasubjectivity.py  subjclueslen1-HLTEMNLP05.tff
NewsSentiment/knowledge/nrcemolex/: converter.py  nrcemolex.py
NewsSentiment/layers/: AggregatorForBert.py  attention.py
NewsSentiment/losses/: crossentropycrossweight.py  crossentropylosslsr.py  crossentropylosswithconfidence.py  seq2seqloss.py
NewsSentiment/models/: FXBaseModel.py  FXEnsemble.py  ensemble.py  ensembleb.py
NewsSentiment/models/multitargets/: contrasting.py  random_multi.py  seq2seq.py  seq2seq_without_targetmask.py  (+2 more)
NewsSentiment/pretrained_models/: .gitignore
knowledge/: knowledgeutils.py
knowledge/bingliuopinion/: bingliuopinion.py  converter.py  license.txt
knowledge/liwc/: liwc.py
knowledge/mpqasubjectivity/: converter.py  mpqasubjectivity.py  subjclueslen1-HLTEMNLP05.tff.ddict
knowledge/nrcemolex/: NRC-Emotion-Lexicon-Wordlevel-v0.92.txt.ddict  converter.py  nrcemolex.py
knowledge/zeros/: zerosknowledge.py
losses/: crossentropycrossweight.py  crossentropylosslsr.py  seq2seqloss.py
models/: FXBaseModel.py  FXEnsemble.py  ensemble.py  ensembleb.py
models/multitargets/: contrasting.py  random_multi.py  seq2seq.py  seq2seq_without_targetmask.py  tdbertlikemultitarget.py  tdbertlikemultitarget_dense.py
models/singletarget/: aen.py  grutscsingle.py  lcf.py  lcf2.py  lcfs.py  lcfst.py  lcft.py  notargetcls.py  random_single.py  spc.py  td_bert.py  td_bert_qa.py  tdbertlikesingle.py
(+35 files in other folders)
