[metadata]
name = NewsSentiment
version = 1.1.13
author = Felix Hamborg
author_email = felix.hamborg@uni-konstanz.de
description = Easy-to-use, high-quality target-dependent sentiment classification for news articles
long_description = file: READMEpypi.md
long_description_content_type = text/markdown
url = https://github.com/fhamborg/NewsMTSC
project_urls =
    Bug Tracker = https://github.com/fhamborg/NewsMTSC/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7,<3.9
# include_package_data = true
install_requires =
    boto3>=1.19.7
    gensim>=4.0.1
    imbalanced-learn>=0.8.1
    jsonlines>=2.0.0
    matplotlib>=3.4.3
    networkx>=2.6.3
    openpyxl>=3.0.5
    pandas>=1.3.3
    torch==1.11
    regex>=2021.10.23
    requests>=2.26.0
    sacremoses>=0.0.46
    scikit-learn>=1.0.1
    spacy>=3.2
    tabulate>=0.8.9
    tqdm>=4.62.3
    transformers>=3.1.0,<4

[options.packages.find]
where = .

[options.package_data]
* = *.txt, *.ddict, *.tff, *.gitignore, *.gitkeep

[options.data_files]
git =
    *.gitignore

[options.extras_require]
cuda =
    cudatoolkit==10.1
